# deonet-partners

./: .gitignore  README.md  pyproject.toml
src/application/dtos/: address_dto.py  money_dto.py  order_dto.py  order_line_dto.py  shipping_info_dto.py
src/domain/models/: address.py  money.py  order.py  order_line.py  order_status.py  shipping_info.py
tests/unit/application/dtos/: test_address_dto.py  test_money_dto.py  test_order_dto.py  test_order_line_dto.py  test_shipping_info_dto.py
tests/unit/domain/models/: test_address.py  test_money.py  test_order.py  test_order_line.py  test_shipping_info.py
